sthlm6000 masking number animation - fixed issue with word-wrap set to break-word - now preventing break

--- a/app/_scss/work/sthlm6000/_masking-number-animation.scss
+++ b/app/_scss/work/sthlm6000/_masking-number-animation.scss
@@ -119,6 +119,10 @@ $sthlm6000green: #00e689;
   .sthlm6000-masking-number-animation__text-container {
     display: inline-block;
     vertical-align: middle;
+
+    h1 {
+	    word-wrap: normal;
+	  }
   }
 }
 
